--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 input*
 wrs2_asc_desc
 run
+shapes/
 diff
 conv
 Elevation
 results
 .vscode
+*.nc
 out
 out2
 out3
@@ -29,3 +31,20 @@ test/outputR
 test/*.tar.gz
 outputR
 testeS
+teste.RData
+.R*
+LC*
+test/ET24h_diff.tif
+test/ET24h_diffPer.tif
+test/ET24h_diff_t.tif
+test/ET24h_mask_conv.tif
+test/NDVI_diff.tif
+test/conv2
+test/converter2.cpp
+test/diffPer
+test/diffPer.cpp
+test/outET24h
+test/outET24hMeeeh
+test/outET24hPer
+test/outNDVI
+test/outRah
